<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.category.AddCategoryActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/reports_header_bk"
                android:paddingLeft="20dp"
                android:paddingTop="60dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    style="@style/viewParent.headerText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="70dp"
                    android:text="@string/category"
                    android:textColor="@color/colorWhite" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/middleHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/headerLayout"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/middleHeader"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_category"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llAddCategory"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/category_name"
                    android:textAlignment="center"
                    android:textColor="@color/fragmentTextColor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCategoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_name"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/category_type"
                    android:textAlignment="center"
                    android:textColor="@color/fragmentTextColor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spCategoryType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnCategorySave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/reports_header_bk"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>