<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.auth.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:layout_marginHorizontal="60dp"/>

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        style="@style/StyleLoginFormInput"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/StyleLoginFormInput"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/StyleLoginFormInput"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account_register"
        style="@style/StyleTextLink"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvResetPasswordLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        style="@style/StyleTextLink"
        android:gravity="center"/>

</LinearLayout>