<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.auth.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:layout_marginHorizontal="60dp"/>

    <EditText
        android:id="@+id/etRegisterFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        style="@style/StyleRegisterFormInput"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etRegisterMiddleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/middle_name"
        style="@style/StyleRegisterFormInput"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etRegisterLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        style="@style/StyleRegisterFormInput"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/StyleRegisterFormInput"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        style="@style/StyleRegisterFormInput"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_8"
        style="@style/StyleRegisterFormInput"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/StyleRegisterFormInput"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        style="@style/StyleTextLink"
        android:gravity="center"/>

</LinearLayout>